--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ div.addthis_toolbox {
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-42948608-1']);
+  _gaq.push(['_setAccount', 'UA-42945821-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -322,13 +322,14 @@ div.addthis_toolbox {
 </div>
 </div>
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-42948608-1', 'radiofore.com');
-ga('send', 'pageview');
+  ga('create', 'UA-42945821-1', 'radiofire.com');
+  ga('send', 'pageview');
+
 </script>
 
 </body>
