Added cinbase BTC button

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ div.addthis_toolbox {
 
 </script>
 
+
+
 </head>
 <body>
 
@@ -213,7 +215,9 @@ div.addthis_toolbox {
             <div class="span6 offset3 order">
               <!-- Standard Bootstrap button. -->
               <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-              <button class="btn btn-success btn-large">Fund</button>
+              <!--              <button class="btn btn-success btn-large">Fund</button> -->
+              <a class="coinbase-button" data-code="9a38858e3363f024475749bb8645700a" data-button-style="custom_large" data-custom="FTF000001" href="https://coinbase.com/checkouts/9a38858e3363f024475749bb8645700a">Fund With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
             </div>
           </div>
           <div class="row-fluid">
